--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>My First Site</title>
+<style>
+    body {
+      background-color: #f0f8ff;
+      font-family: 'Helvetica', sans-serif;
+      color: #333;
+      text-align: center;
+      padding: 50px;
+    }
+
+    h1 {
+      color: #0066cc;
+      font-size: 2.5em;
+    }
+
+    p {
+      font-size: 1.2em;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
   <h1>Hello GitHub Pages!</h1>
