--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello GitHub Pages!</h1>
-  <p>更新しました</p>
+  <header class="site-header">
+    <div class="inner">
+      <h1 class="logo">PORTFOLIO</h1>
+      <nav class="site-nav">
+        <ul>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#works">WORKS</a></li>
+          <li><a href="#News">NEWS</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <footer>…</footer>
 </body>
 </html>
