--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header class="site-header">
     <div class="inner">
-      <h1 class="logo">PORTFOLIO</h1>
+      <h1 class="logo">My Work</h1>
       <nav class="site-nav">
         <ul>
           <li><a href="#about">ABOUT</a></li>
@@ -19,6 +19,24 @@
       </nav>
     </div>
   </header>
+  <section id="about" class="section-about">
+    <div class="about-image">
+      <img src="about.jpg" alt="建物と空の写真">
+    </div>
+    
+    <div class="about-text">
+      <h2>About</h2>
+      <p>Xxxxx Ashley</p>
+      <p>2th Floor xxxxx Building x-x-x Nishiazabu, Minato-ku, Tokyo 106-0031 Japan<br>
+      tel: 000-0000-0000<br>
+      url: www.xxxxxx.jp<br>
+      mail: xxx@xxxxx.jp</p>
+  
+      <p>
+        プロフィールテキストテキストテキストテキストテキストテキストテキストテキスト…  
+      </p>
+    </div>
+</section>
   <footer>…</footer>
 </body>
 </html>
