--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
   <section id="about" class="section-about">
     <div class="about-image">
-      <img src="about.jpg" alt="建物と空の写真">
+      <img src="images/mainvisual-pc.jpg" alt="画像">
     </div>
     
     <div class="about-text">
