--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <header class="site-header">
     <div class="inner">
-      <h1 class="logo">My Work</h1>
+      <h1 class="logo">
+        <img src="images/logo.svg" alt="サイトロゴ">
+      </h1>
       <nav class="site-nav">
         <ul>
           <li><a href="#about">ABOUT</a></li>
