--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
       </p>
     </div>
 </section>
+  <section id="works" class="section-works">
+  <h2>Works</h2>
+  <div class="works-list">
+    <img src="images/works1.jpg" alt="作品1">
+    <img src="images/works2.jpg" alt="作品2">
+    <img src="images/works3.jpg" alt="作品3">
+    <img src="images/works4.jpg" alt="作品4">
+    <img src="images/works5.jpg" alt="作品5">
+    <img src="images/works6.jpg" alt="作品6">
+  </div>
+</section>
+
   <footer>…</footer>
 </body>
 </html>
