--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
     <img src="images/works6.jpg" alt="作品6">
   </div>
 </section>
+<section id="news" class="section-news">
+  <h2>News</h2>
+  <ul class="news-list">
+    <li>
+      <span class="date">2020.XX.XX</span>
+      <span class="text">デザイン雑誌「XXXXXX Vol.11」に掲載していただきました。</span>
+    </li>
+    <li>
+      <span class="date">2020.XX.XX</span>
+      <span class="text">X月X日から写真集「XXXXXX」の販売を開始します。</span>
+    </li>
+    <li>
+      <span class="date">2019.XX.XX</span>
+      <span class="text">【イベント開催のお知らせ】テキストテキストテキスト…</span>
+    </li>
+  </ul>
+</section>
+<section id="contact" class="section-contact">
+  <h2>Contact</h2>
+  <div class="google-form">
+    <iframe src="https://docs.google.com/forms/d/e/18ib9R0Q0hOs3pQJROJuQ5Nb-il8MAz4pub2jfHOcdWU/viewform?embedded=true"
+      width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+  </div>
+</section>
 
   <footer>…</footer>
 </body>
