--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section id="contact" class="section-contact">
   <h2>Contact</h2>
   <div class="google-form">
-    <iframe src="https://docs.google.com/forms/d/e/18ib9R0Q0hOs3pQJROJuQ5Nb-il8MAz4pub2jfHOcdWU/viewform?embedded=true"
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjYSDRJgyGJRQiy8BHpBiqYCRn-a_SAIhq-m_V_tLuXrPLiw/viewform?usp=dialog"
       width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
   </div>
 </section>
